# Custom-NVComp-with-ZSTD

./: .gitignore  C:\Users\Rhushabh\.gemini\antigravity\brain\ff7dde1b-d440-498d-adc5-f6e6e92478a4\walkthrough.md  CMakeCache.txt  CMakeLists.txt  CODE_ANALYSIS.md  CUsersRhushabh.geminiantigravitybrainff7dde1b-d440-498d-adc5-f6e6e92478a4walkthrough.md  DEBUGLOG.md  DICTIONARY_MEMORY_FIXES.md  FINAL_STATUS.md  FINAL_STATUS_COMPLETE.md  FIXES_PLAN.md  FSE_SEQUENCE_DECODE_FIXES.md  IMPLEMENTATION_COMPLETION_REPORT.md  LEGACY_PARSECOST_INVENTORY.md  LICENSE  PARSECOST_MIGRATION_GUIDE.md  PROJECT_COMPLETE.md  README.md  SESSION_SUMMARY.md  TEST_ANALYSIS.md  TEST_RESULTS_ANALYSIS.md  TEST_RESULTS_SUMMARY.md  V2_README.md  analyze_huffman.py  benchmark_fse  benchmark_fse_gpu  benchmark_huffman  benchmark_lz77  benchmark_output.txt  benchmark_results.csv  binary_search_10.txt  binary_search_1000.txt  binary_search_2500.txt  binary_search_2800.txt  build_and_benchmark_output.txt  build_and_test.sh  build_and_test_output.txt  build_errors.txt  build_log.txt  build_log_comprehensive_fallback.txt  (+238 more)
Previous Progress/: Debugging FSE Encoder Compliance.md  Debugging Pipeline Timeout.md  Final Zstandard Polish & Optimization.md
benchmarks/: benchmark_adaptive.cu  benchmark_all_levels.cu  benchmark_batch_fse.cu  benchmark_batch_throughput.cu  benchmark_block_size.cu  benchmark_c_api.cu  benchmark_comprehensive_levels.cu  benchmark_dictionary_compression.cu  benchmark_fse.cu  benchmark_fse_decode.cu  benchmark_fse_gpu.cu  benchmark_fse_host_fallback.cu  benchmark_fse_parallel.cu  benchmark_huffman.cu  benchmark_hybrid.cu  benchmark_inference_api.cu  benchmark_lz77.cu  benchmark_memory_alloc.cu  benchmark_nvcomp_interface.cu  benchmark_parallel_backtracking.cu  benchmark_parallel_throughput.cu  benchmark_phase3.cu  benchmark_pipeline.cu  benchmark_pipeline_streaming.cu  benchmark_setup_throughput.cu  benchmark_stream_pool.cu  benchmark_streaming.cu  benchmark_streaming_comparison.cu  benchmark_xxhash.cu  benchmark_zstd_comparison.cu  benchmark_zstd_gpu_comparison.cu  comprehensive_benchmark.cu  fixed_benchmark.cu  limited_benchmark.cu  run_performance_suite.cu
build_v32/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/: cuda_zstdConfig.cmake.in
docs/: ADAPTIVE-LEVEL-SELECTION.md  ALTERNATIVE_ALLOCATION_STRATEGIES_IMPLEMENTATION.md  ARCHITECTURE-OVERVIEW.md  BATCH-PROCESSING.md  BENCHMARKING-GUIDE.md  BUILD-GUIDE.md  C-API-REFERENCE.md  CHECKSUM-IMPLEMENTATION.md  DEBUGGING-GUIDE.md  DICTIONARY-IMPLEMENTATION.md  ERROR-HANDLING.md  FALLBACK_STRATEGIES_IMPLEMENTATION.md  FINAL_PROJECT_REPORT.md  FRAME-FORMAT.md  FSE-IMPLEMENTATION.md  HASH_TABLE_OPTIMIZATION.md  HUFFMAN-IMPLEMENTATION.md  HYBRID-ENGINE.md  INDEX.md  KERNEL-REFERENCE.md  LZ77-IMPLEMENTATION.md  MANAGER-IMPLEMENTATION.md  MEMORY-POOL-IMPLEMENTATION.md  NVCOMP-INTEGRATION.md  PERFORMANCE-TUNING.md  QUICK-REFERENCE.md  RELEASE_NOTES.md  SEQUENCE-IMPLEMENTATION.md  STREAM-OPTIMIZATION.md  STREAMING-API.md  TESTING-GUIDE.md  TROUBLESHOOTING.md  XXHASH-IMPLEMENTATION.md  implementation-100.md  implementation-complete.md  literal-header-fix.md  stream_based_parallelism.md  walkthrough.md
include/: batch_manager.h  benchmark_results.h  common_types.h  cuda_zstd.h  cuda_zstd_adaptive.h  cuda_zstd_cuda_ptr.h  cuda_zstd_debug.h  cuda_zstd_dictionary.h  cuda_zstd_fse.h  cuda_zstd_fse_encoding_kernel.h  cuda_zstd_fse_rfc.h  cuda_zstd_hash.h  cuda_zstd_huffman.h  cuda_zstd_hybrid.h  cuda_zstd_internal.h  cuda_zstd_ldm.h  cuda_zstd_lz77.h  cuda_zstd_manager.h  cuda_zstd_memory_pool.h  cuda_zstd_memory_pool_complex.h  cuda_zstd_memory_pool_enhanced.h  cuda_zstd_nvcomp.h  cuda_zstd_primitives.h  cuda_zstd_safe_alloc.h  cuda_zstd_sequence.h  cuda_zstd_stacktrace.h  cuda_zstd_stream_pool.h  cuda_zstd_types.h  cuda_zstd_utils.h  cuda_zstd_xxhash.h  error_context.h  lz77_parallel.h  lz77_types.h  performance_profiler.h  stream_pool.h  throughput_display.h  workspace_manager.h
other docs/: Extend the Context length just like llama 4 scout.md  Give me all the architectures of llm till date.md  Honest Assessment of Your Research Projects.md  do extensive research on exploiting weight_value s.md  gemini_research-project-6_2026-01-03T15-42-44+0530.md  gemini_research-project-7_2026-01-03T15-50-43+0530.md  is there any algorithm superior to Tap-out(bandit).md  lorax (1).md  while submitting a research paper, does it go thro.md
project-use-case/: backup_preprocess.py  evaluation.py  framework.py  jit_layer.py  merge_shards.py  preprocess.py
python/: CMakeLists.txt  README.md  pyproject.toml
python/cuda_zstd/: __init__.py  _core.pyi
python/src/: binding.cpp
python/tests/: conftest.py  test_basic.py
scripts/: monitor_resources.sh  run_all_tests.sh  run_all_tests_with_timeout.sh  run_tests_memcheck.ps1  run_tests_memcheck.sh
src/: FSE_RFC_README.md  batch_manager.cu  cuda_zstd_adaptive.cu  cuda_zstd_c_api.cpp  cuda_zstd_debug.cu  cuda_zstd_dictionary.cu  cuda_zstd_fse.cu  cuda_zstd_fse_chunk_kernel.cuh  cuda_zstd_fse_encoding_kernel.cu  cuda_zstd_fse_prepare.cu  cuda_zstd_fse_reference.cu  cuda_zstd_fse_reference.h  cuda_zstd_fse_rfc.cu  cuda_zstd_fse_rfc_decoder.cu  cuda_zstd_fse_zstd_encoder.cuh  cuda_zstd_hash.cu  cuda_zstd_huffman.cu  cuda_zstd_huffman.cu.new  cuda_zstd_huffman_simple.cu  cuda_zstd_hybrid.cu  cuda_zstd_lz77.cu  cuda_zstd_manager.cu  cuda_zstd_manager.cu.snippet  cuda_zstd_manager.cu_helper  cuda_zstd_memory_pool.cu  cuda_zstd_memory_pool_complex.cu  cuda_zstd_nvcomp.cpp  cuda_zstd_sequence.cu  cuda_zstd_stacktrace.cpp  cuda_zstd_stream_pool.cpp  cuda_zstd_types.cpp  cuda_zstd_utils.cpp  cuda_zstd_utils.cu  cuda_zstd_xxhash.cu  error_context.cpp  error_logger.cpp  fse_build_cpu_draft.cpp  gpu_bitstream.cuh  gpu_fse_state.cuh  ldm_implementation.cu  (+8 more)
tests/: benchmark_batch_fse.cu  benchmark_block_size.cu  benchmark_fse_parallel.cu  benchmark_huffman.cu  benchmark_inference_api.cu  benchmark_lz77.cu  benchmark_parallel_backtracking.cu  benchmark_pipeline.cu  check_cuda.cu  compare_outputs.py  (+160 more)
(+46 files in other folders)
